[package]
name = "glhf"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.4"}
axum-extra = { version = "0.9.2", features = ["typed-header"] }
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.112"
shuttle-axum = "0.37.0"
shuttle-runtime = "0.37.0"
shuttle-secrets = "0.37.0"
shuttle-shared-db = { version = "0.37.0", features = ["sqlx","postgres"] }
sqlx = { version = "0.7.2", features = ["postgres"] }
tokio = "1.28.2"
tracing = "0.1.40"
